Closed
Bug 339247
Opened 19 years ago
Closed 19 years ago
empty node of type xsd:anyURI does not validate
Categories
(Core Graveyard :: Web Services, defect)
Core Graveyard
Web Services
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: sspeiche, Unassigned)
References
()
Details
(Keywords: fixed1.8.0.8, fixed1.8.1.1)
Attachments
(2 files)
|
1.30 KB,
application/xhtml+xml
|
Details | |
|
1.17 KB,
patch
|
doronr
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.3) Gecko/20060426 Firefox/1.5.0.3
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.0.3) Gecko/20060426 Firefox/1.5.0.3
Xerces validator treats any empty node of type xsd:anyURI as valid. According to the RFC, it appears that empty URI is valid as well.
Reproducible: Always
| Reporter | ||
Comment 1•19 years ago
|
||
| Reporter | ||
Comment 2•19 years ago
|
||
Attachment #223349 -
Flags: review?(doronr)
Updated•19 years ago
|
Attachment #223349 -
Flags: review?(doronr) → review+
Comment 3•19 years ago
|
||
checked into trunk
Status: UNCONFIRMED → NEW
Ever confirmed: true
Whiteboard: xf-to-branch
Updated•19 years ago
|
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Updated•19 years ago
|
Component: XForms → Web Services
OS: Windows XP → All
Hardware: PC → All
checked into 1.8 branch on 2006/11/21
Keywords: fixed1.8.1.1
Whiteboard: xf-to-branch
Updated•8 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•