Bug 339247 - empty node of type xsd:anyURI doesn't validate.  Patch my sspeiche, r=me